--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EddyVerbruggen/Flashlight-PhoneGap-Plugin.git"
+    "url": "git+https://github.com/AngelHerrer/Flashlight-PhoneGap-Plugin.git"
   },
   "keywords": [
     "Torch",
@@ -30,10 +30,10 @@
       "version": ">=3.0.0"
     }
   ],
-  "author": "Eddy Verbruggen <eddyverbruggen@gmail.com> (https://github.com/EddyVerbruggen)",
+  "author": "Eddy Verbruggen <eddyverbruggen@gmail.com> (https://github.com/AngelHerrer)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/EddyVerbruggen/Flashlight-PhoneGap-Plugin/issues"
+    "url": "https://github.com/AngelHerrer/Flashlight-PhoneGap-Plugin/issues"
   },
-  "homepage": "https://github.com/EddyVerbruggen/Flashlight-PhoneGap-Plugin#readme"
+  "homepage": "https://github.com/AngelHerrer/Flashlight-PhoneGap-Plugin#readme"
 }
